--- a/cv.html
+++ b/cv.html
@@ -19,21 +19,25 @@
         }
 
         h1 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+            font-size: 3em;
+            margin-bottom: 30px;
+            text-shadow: 3px 3px 8px rgba(0, 0, 0, 0.3);
         }
 
         h2 {
-            font-size: 1.8em;
-            margin: 20px 0 10px 0;
+            font-size: 2em;
+            margin: 25px 0 15px 0;
+            color: #f0f0f0;
+            text-transform: uppercase;
+            letter-spacing: 2px;
         }
 
         p, ul {
             font-size: 1.2em;
-            line-height: 1.6;
-            max-width: 800px;
+            line-height: 1.8;
+            max-width: 900px;
             text-align: left;
+            margin-bottom: 20px;
         }
 
         ul {
@@ -42,24 +46,52 @@
         }
 
         ul li {
-            margin-bottom: 10px;
+            margin-bottom: 15px;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 10px;
+            border-radius: 5px;
+        }
+
+        ul li strong {
+            color: #b3d4fc;
         }
 
         a {
             color: #fff;
-            text-decoration: underline;
-            margin-top: 20px;
+            text-decoration: none;
             font-weight: bold;
             font-size: 1.1em;
+            margin-top: 30px;
+            padding: 10px 20px;
+            background-color: #1e3c72;
+            border-radius: 5px;
+            transition: background-color 0.3s;
         }
 
         a:hover {
-            color: #b3d4fc;
+            background-color: #2a5298;
+        }
+
+        /* Responsiveness */
+        @media (max-width: 768px) {
+            body {
+                padding: 20px;
+            }
+            h1 {
+                font-size: 2.2em;
+            }
+            h2 {
+                font-size: 1.6em;
+            }
+            p, ul {
+                font-size: 1em;
+                max-width: 100%;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>Mon CV</h1>
+    <h1>Ali Wari - Mon CV</h1>
 
     <h2>Compétences Techniques</h2>
     <ul>
