--- a/cv.html
+++ b/cv.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(to bottom, #1e3c72, #2a5298);
+            background: linear-gradient(to bottom, #4e73df, #224abe); /* Couleurs ajustées pour un fond dégradé */
             color: #fff;
             padding: 40px;
             display: flex;
@@ -22,12 +22,13 @@
             font-size: 3em;
             margin-bottom: 30px;
             text-shadow: 3px 3px 8px rgba(0, 0, 0, 0.3);
+            color: #ffffff;
         }
 
         h2 {
             font-size: 2em;
             margin: 25px 0 15px 0;
-            color: #f0f0f0;
+            color: #f1f1f1;
             text-transform: uppercase;
             letter-spacing: 2px;
         }
@@ -53,7 +54,7 @@
         }
 
         ul li strong {
-            color: #b3d4fc;
+            color: #ffb3c1; /* Couleur accent légère */
         }
 
         a {
@@ -63,13 +64,13 @@
             font-size: 1.1em;
             margin-top: 30px;
             padding: 10px 20px;
-            background-color: #1e3c72;
+            background-color: #4e73df; /* Couleur bouton principale */
             border-radius: 5px;
             transition: background-color 0.3s;
         }
 
         a:hover {
-            background-color: #2a5298;
+            background-color: #224abe; /* Couleur du bouton lors du survol */
         }
 
         /* Responsiveness */
