--- a/stage.html
+++ b/stage.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(to bottom, #2a5298, #1e3c72);
+            background: linear-gradient(to bottom, #2a5298, #1e3c72); /* Dégradé bleu pour un look professionnel */
             color: #fff;
             padding: 40px;
             display: flex;
@@ -57,7 +57,7 @@
 
         ul li::before {
             content: "•";
-            color: #b3d4fc;
+            color: #b3d4fc; /* Bleu clair pour les puces */
             font-size: 1.5em;
             position: absolute;
             left: 0;
@@ -71,13 +71,13 @@
             font-weight: bold;
             font-size: 1.2em;
             padding: 10px 20px;
-            background-color: #1e3c72;
+            background-color: #1e3c72; /* Fond bleu du bouton */
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
 
         a:hover {
-            background-color: #b3d4fc;
+            background-color: #b3d4fc; /* Couleur du bouton au survol */
             color: #2a5298;
         }
 
