--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #1e3c72, #2a5298);
+            background: linear-gradient(135deg, #1e3c72, #2a5298); /* Dégradé bleu */
             color: #fff;
             text-align: center;
             display: flex;
@@ -22,6 +22,7 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
+            padding: 20px;
         }
 
         /* Header Styling */
@@ -85,7 +86,7 @@
         }
 
         footer a {
-            color: #b3d4fc;
+            color: #b3d4fc; /* Bleu clair */
             text-decoration: none;
         }
 
@@ -106,7 +107,7 @@
         <a href="apropos.html" class="button">À propos</a>
         <a href="stage.html" class="button">Stage</a>
         <a href="https://github.com/AliWari2" class="button" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/votre-nom" class="button" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/ali-wari-2a70a2272/" class="button" target="_blank">LinkedIn</a>
         <a href="cv.html" class="button">CV</a>
     </div>
 
