--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(to bottom, #2a5298, #1e3c72); /* Dégradé bleu similaire à la page À propos */
+            background: linear-gradient(to bottom, #2c3e50, #4ca1af);
             color: #fff;
             text-align: center;
             display: flex;
@@ -24,6 +24,7 @@
             min-height: 100vh;
             padding: 20px;
         }
+
 
         /* Header Styling */
         header {
