--- a/cv.html
+++ b/cv.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(to bottom, #2a5298, #1e3c72); /* Couleurs adaptées */
+            background: linear-gradient(to bottom, #2c3e50, #4ca1af); /* Dégradé identique */
             color: #fff;
             padding: 40px;
             display: flex;
@@ -23,14 +23,14 @@
         h1 {
             font-size: 3em;
             margin-bottom: 30px;
-            text-shadow: 3px 3px 8px rgba(0, 0, 0, 0.3);
+            text-shadow: 3px 3px 8px rgba(0, 0, 0, 0.5);
             color: #fff;
         }
 
         h2 {
             font-size: 2em;
             margin: 25px 0 15px 0;
-            color: #ff8c00; /* Orange pour les titres */
+            color: #f39c12; /* Orange identique */
             text-transform: uppercase;
             letter-spacing: 2px;
         }
@@ -41,6 +41,7 @@
             max-width: 900px;
             text-align: left;
             margin-bottom: 20px;
+            color: #ecf0f1; /* Harmonisation du texte */
         }
 
         ul {
@@ -56,24 +57,24 @@
         }
 
         ul li strong {
-            color: #ff8c00; /* Orange pour les accents */
+            color: #f39c12; /* Orange identique */
         }
 
         a {
-            color: #fff;
+            color: #f39c12;
             text-decoration: none;
             font-weight: bold;
             font-size: 1.1em;
             margin-top: 30px;
             padding: 10px 20px;
-            background-color: #1e3c72;
+            border: 2px solid #f39c12;
             border-radius: 5px;
             transition: background-color 0.3s;
         }
 
         a:hover {
-            background-color: #ff8c00;
-            color: #1e3c72;
+            background-color: #f39c12;
+            color: #fff;
         }
 
         @media (max-width: 768px) {
@@ -104,7 +105,6 @@
         <li><strong>Bases de données :</strong> Conception et gestion relationnelle optimisée avec SQL.</li>
         <li><strong>Outils :</strong> Utilisation d’outils collaboratifs tels que Git pour le versionnement, et JUnit pour les tests unitaires.</li>
     </ul>
-
    <h2>Projets Réalisés</h2>
         <ul>
             <li><strong>Site de location immobilière (2024) :</strong> Développement d’un site permettant aux propriétaires de publier des annonces de logement, avec des fonctionnalités pour les chercheurs de logements, telles que la consultation des annonces, l’ajout aux favoris et la possibilité de contacter directement les propriétaires. 
