--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ali Wari - Ingénieur Logiciel</title>
+    <title>CV - Ali Wari</title>
     <style>
         /* Reset & Base Styling */
         * {
@@ -20,34 +20,17 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            min-height: 100vh;
             padding: 20px;
+            min-height: 100vh;
         }
 
-
-        /* Header Styling */
-        header {
-            margin-bottom: 50px;
-            text-align: center;
-        }
-
-        header h1 {
-            font-size: 3.5em;
-            font-weight: bold;
-            margin-bottom: 10px;
+        h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
             text-shadow: 2px 4px 6px rgba(0, 0, 0, 0.3);
+            color: #f39c12;
         }
 
-        header p {
-            font-size: 1.3em;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 0 auto;
-            text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.2);
-        }
-
-        /* Button Container Styling */
         .button-container {
             display: flex;
             gap: 20px;
@@ -56,7 +39,6 @@
             margin-top: 30px;
         }
 
-        /* Button Styling */
         .button {
             background: rgba(255, 255, 255, 0.1);
             color: #fff;
@@ -78,16 +60,14 @@
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
         }
 
-        /* Footer Styling */
         footer {
-            position: absolute;
-            bottom: 10px;
+            margin-top: 40px;
             font-size: 0.9em;
             color: rgba(255, 255, 255, 0.7);
         }
 
         footer a {
-            color: #b3d4fc; /* Bleu clair comme sur la page À propos */
+            color: #b3d4fc;
             text-decoration: none;
         }
 
@@ -97,19 +77,11 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>Ali Wari</h1>
-        <p>
-            Étudiant en Master 1 Ingénierie Logicielle, passionné par le développement logiciel et les technologies innovantes, je suis à la recherche d'un stage de plusieurs mois à partir d'avril 2024 et d'une alternance à partir de septembre 2024. Découvrez mes projets, compétences et expériences en cliquant sur les boutons ci-dessous.
-        </p>
-    </header>
+    <h1>Mon CV</h1>
 
     <div class="button-container">
-        <a href="apropos.html" class="button">À propos</a>
-        <a href="stage.html" class="button">Stage</a>
-        <a href="https://github.com/AliWari2" class="button" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/votre-nom" class="button" target="_blank">LinkedIn</a>
-        <a href="cv.html" class="button">CV</a>
+        <a href="pdf/AliWari_CV.pdf" class="button">Télécharger le CV (PDF)</a>
+        <a href="index.html" class="button">Retour à l'accueil</a>
     </div>
 
     <footer>
