--- a/index.html
+++ b/index.html
@@ -23,28 +23,37 @@
             justify-content: center;
             min-height: 100vh;
             padding: 20px;
+            overflow: hidden;
         }
-
 
         /* Header Styling */
         header {
             margin-bottom: 50px;
             text-align: center;
+            animation: fadeIn 1s ease-in;
         }
 
         header h1 {
-            font-size: 3.5em;
+            font-size: 4em;
             font-weight: bold;
             margin-bottom: 10px;
             text-shadow: 2px 4px 6px rgba(0, 0, 0, 0.3);
+            color: #fff;
         }
 
         header p {
-            font-size: 1.3em;
-            line-height: 1.6;
-            max-width: 800px;
+            font-size: 1.4em;
+            line-height: 1.8;
+            max-width: 900px;
             margin: 0 auto;
             text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.2);
+            color: rgba(255, 255, 255, 0.85);
+        }
+
+        /* Animation for fade-in effect */
+        @keyframes fadeIn {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
         }
 
         /* Button Container Styling */
@@ -61,7 +70,7 @@
             background: rgba(255, 255, 255, 0.1);
             color: #fff;
             padding: 15px 30px;
-            font-size: 1.1em;
+            font-size: 1.2em;
             font-weight: bold;
             text-decoration: none;
             border: 2px solid transparent;
@@ -69,6 +78,8 @@
             transition: all 0.3s ease;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
             backdrop-filter: blur(5px);
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
 
         .button:hover {
@@ -78,17 +89,24 @@
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
         }
 
+        .button:active {
+            transform: translateY(2px);
+            box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2);
+        }
+
         /* Footer Styling */
         footer {
             position: absolute;
-            bottom: 10px;
+            bottom: 20px;
             font-size: 0.9em;
             color: rgba(255, 255, 255, 0.7);
+            animation: fadeIn 2s ease-in;
         }
 
         footer a {
-            color: #b3d4fc; /* Bleu clair comme sur la page À propos */
+            color: #b3d4fc;
             text-decoration: none;
+            font-weight: bold;
         }
 
         footer a:hover {
