--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
     <div class="button-container">
         <a href="apropos.html" class="button">À propos</a>
         <a href="stage.html" class="button">Stage</a>
-        <a href="https://github.com/AliWari2" class="button" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/votre-nom" class="button" target="_blank">LinkedIn</a>
         <a href="cv.html" class="button">CV</a>
+        <a href="https://github.com/AliWari2" class="button" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/ali-wari-2a70a2272/" class="button" target="_blank">LinkedIn</a>
     </div>
 
     <footer>
